fix: letter-spacing token for extra-light accordion and comparison-table (#76)

--- a/projects/ng-aquila/src/shared-styles/theming/tokens.scss
+++ b/projects/ng-aquila/src/shared-styles/theming/tokens.scss
@@ -239,7 +239,7 @@ $nx-theme: (
   accordion-extra-light-font-size: 16px,
   accordion-extra-light-line-height: 24px,
   accordion-extra-light-font-weight: 600,
-  accordion-extra-light-letter-spacing: 1,
+  accordion-extra-light-letter-spacing: 1px,
 
   action-font-size: paragraph-03-font-size,
   action-line-height: paragraph-03-line-height,
@@ -488,7 +488,7 @@ $nx-theme: (
   comparison-table-group-label-font-size: 16px,
   comparison-table-group-label-line-height: 24px,
   comparison-table-group-label-font-weight: 600,
-  comparison-table-group-label-letter-spacing: 1,
+  comparison-table-group-label-letter-spacing: 1px,
 
   selectable-card-text-color: text-01,
   selectable-card-background-color: ui-01,
